--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <img src="images/20250416_172517.jpg" alt="Profile Picture" width="150">
     <div>
       <h2>Hi, I am Udita</h2>
-      <p>I am currently pursuing a Bachelor of Pharmacy at BITS Pilani, Pilani Campus, with a strong interest in healthcare and research in the pharmaceutical domain.</p>
+      <p>Welcome! I created this site to showcase my journey and interests. I am currently pursuing a Bachelor of Pharmacy at BITS Pilani, Pilani Campus, with a strong interest in healthcare and research in the pharmaceutical domain.</p>
     </div>
   </section>
 </div>
@@ -38,12 +38,13 @@
   <section id="about">
     <h2>About Me</h2>
     <p>I'm interested in pharmaceutical research, clinical studies, and digital health technologies.</p>
+    <p>I aspire to pursue further research in drug delivery systems and explore how emerging technologies can transform patient care.</p>
     <p>Also interested in exploring opportunities in product management and marketing as well.</p>
-    <p>Outside of academics, I enjoy painting and singing.</p>
+    <p>Outside of academics, you will probably find me sketching in a corner or humming a pop hit.</p>
   </section>
 
   <!-- My Work -->
-<section id="work">
+<section id="project">
   <h2>My Projects</h2>
   <div class="projects">
 
@@ -72,7 +73,8 @@
     <h3> Phone Number <a href="tel:8975938515">8975938515</a> </h3>    
     <h3>Email me at <a href="mailto:f20231196@pilani.bits-pilani.ac.in">f20231196@pilani.bits-pilani.ac.in</a></h3>
     <p>
-      <a href="https://github.com/uditasingh" target="_blank">GitHub</a> |
+      <a href="https://instagram.com/udii_._146" target="_blank">Instagram</a> |
+      <a href="https://github.com/Udita999" target="_blank">GitHub</a> |
       <a href="https://linkedin.com/in/uditasingh" target="_blank">LinkedIn</a>
     </p>
 
