--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
   <section class="intro">
     <img src="images/20250416_172517.jpg" alt="Profile Picture" width="150">
     <div>
-      <h2>Hi, I am Udita</h2>
-      <p>Welcome! I created this site to showcase my journey and interests. I am currently pursuing a Bachelor of Pharmacy at BITS Pilani, Pilani Campus, with a strong interest in healthcare and research in the pharmaceutical domain.</p>
+      <h2>Hi, I’m Udita — Welcome to my Portfolio!</h2>
+      <p>I created this site to share my academic journey, personal interests, and some of the projects I’ve worked on so far. I am currently pursuing a Bachelor of Pharmacy at BITS Pilani, Pilani Campus, with a keen interest in healthcare innovation and cutting-edge research in the pharmaceutical field.</p>
     </div>
   </section>
 </div>
@@ -37,6 +37,7 @@
   <!-- About Me -->
   <section id="about">
     <h2>About Me</h2>
+    <p>I completely my schooling at St. Claret School in Nagpur, Maharashtra. And currently I'm residing in Jaipur and pursuing pharmacy at BITS Pilani.</p>
     <p>I'm interested in pharmaceutical research, clinical studies, and digital health technologies.</p>
     <p>I aspire to pursue further research in drug delivery systems and explore how emerging technologies can transform patient care.</p>
     <p>Also interested in exploring opportunities in product management and marketing as well.</p>
@@ -50,17 +51,17 @@
 
     <!-- Project 1 -->
     <div class="project">
-      <img src="https://via.placeholder.com/200x150" alt="Project 1 Image">
+      <img src="Images/project_image_1.png" alt="Project 1 Image">
       <h3>Long-Acting Nanomedicines</h3>
-      <p>Exploring nanotechnology-based drug delivery systems for sustained release and improved patient outcomes.</p>
+      <p>Exploring nanotechnology-based drug delivery systems for sustained release and improved patient outcomes. Such systems can reduce dosing frequency, enhance patient convenience, and ensure better therapeutic effects, especially for chronic conditions.</p>
       <a href="#">View Project</a>
     </div>
 
     <!-- Project 2 -->
     <div class="project">
-      <img src="https://via.placeholder.com/200x150" alt="Project 2 Image">
-      <h3>Project Title Placeholder</h3>
-      <p>Brief description of another project or area of interest.</p>
+      <img src="Images/project_image_2.png" alt="Project 2 Image">
+      <h3>Development of Personal Portfolio Demo Website</h3>
+      <p>This project involved creating a user-friendly and visually appealing personal website from scratch using HTML, CSS, and JavaScript. The goal was to design a platform where I could present my educational background, research interests, and creative work in a professional and organized manner. Through this project, I gained hands-on experience with frontend web development.</p>
       <a href="#">View Project</a>
     </div>
 
@@ -72,11 +73,20 @@
     <h2>Contact Me</h2> 
     <h3> Phone Number <a href="tel:8975938515">8975938515</a> </h3>    
     <h3>Email me at <a href="mailto:f20231196@pilani.bits-pilani.ac.in">f20231196@pilani.bits-pilani.ac.in</a></h3>
-    <p>
-      <a href="https://instagram.com/udii_._146" target="_blank">Instagram</a> |
-      <a href="https://github.com/Udita999" target="_blank">GitHub</a> |
-      <a href="https://linkedin.com/in/uditasingh" target="_blank">LinkedIn</a>
-    </p>
+    <div class="spacer"></div>
+    <div class="social_media">
+      <p>
+      <a href="https://instagram.com/udii_._146" target="_blank">
+        <img src="images/instagram.png" alt="Instagram" width="20" class="social_media">Instagram
+      </a> |
+      <a href="https://github.com/Udita999" target="_blank">
+        <img src="images/github.png" alt="GitHub" width="20" class="social_media">GitHub
+      </a> |
+      <a href="https://linkedin.com/in/uditasingh" target="_blank">
+        <img src="images/linkedin.png" alt="LinkedIn" width="20" class="social_media">LinkedIn
+      </a>
+      </p>
+    </div>
 
     <form>
       <input type="text" placeholder="Your Name" required />
