--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
     <!-- Project 1 -->
     <div class="project">
-      <img src="Images/project_image_1.png" alt="Project 1 Image">
+      <img src="images/project_image_1.png" alt="Project 1 Image">
       <h3>Long-Acting Nanomedicines</h3>
       <p>Exploring nanotechnology-based drug delivery systems for sustained release and improved patient outcomes. Such systems can reduce dosing frequency, enhance patient convenience, and ensure better therapeutic effects, especially for chronic conditions.</p>
       <a href="#">View Project</a>
@@ -59,7 +59,7 @@
 
     <!-- Project 2 -->
     <div class="project">
-      <img src="Images/project_image_2.png" alt="Project 2 Image">
+      <img src="images/project_image_2.png" alt="Project 2 Image">
       <h3>Development of Personal Portfolio Demo Website</h3>
       <p>This project involved creating a user-friendly and visually appealing personal website from scratch using HTML, CSS, and JavaScript. The goal was to design a platform where I could present my educational background, research interests, and creative work in a professional and organized manner. Through this project, I gained hands-on experience with frontend web development.</p>
       <a href="#">View Project</a>
