--- a/index.html
+++ b/index.html
@@ -77,13 +77,13 @@
     <div class="social_media">
       <p>
       <a href="https://instagram.com/udii_._146" target="_blank">
-        <img src="images/instagram.png" alt="Instagram" width="20" class="social_media">Instagram
+        <img src="images/instagram.png" alt="Instagram" width="20" class="social_media"><span>Instagram</span>
       </a> |
       <a href="https://github.com/Udita999" target="_blank">
-        <img src="images/github.png" alt="GitHub" width="20" class="social_media">GitHub
+        <img src="images/github.png" alt="GitHub" width="20" class="social_media"><span>GitHub</span>
       </a> |
       <a href="https://linkedin.com/in/uditasingh" target="_blank">
-        <img src="images/linkedin.png" alt="LinkedIn" width="20" class="social_media">LinkedIn
+        <img src="images/linkedin.png" alt="LinkedIn" width="20" class="social_media"><span>LinkedIn</span>
       </a>
       </p>
     </div>
